# utilities

./: .gitattributes  .gitconfig  .gitignore  Backups.html  External_Commands.html  Internet.html  Makefile  Other.html  Pipfile  README.md  README.rst  TODO  TODO.andtestbatchrenamer.patch  TODO.md  TODO.rst  Text.html  __init__.py  api.html  environment.linux.json  environment.windows.txt  environment.windows_2.txt  filesystem.html  genindex.html  index.html  math.html  numerical-1.py  numerical.html  numpydoc.html  numpydoc_docstring.html  package-lock.json  package.json  py-modindex.html  readme.html  requirements.txt  requirements_dev.txt  search.html  setup.cfg  setup.py  todo.html  tutorial.html  (+1 more)
_modules/: conf.html  index.html  make.html
_modules/pyutil/: backup_nt_and_posix.html  batch_renamer.html  check_IP.html  conda_export.html  dir3.html  dir_cleaner.html  dlink.html  dlink2.html  env.html  env_checks.html  find_pics.html  g.html  (+15 more)
_sources/: Backups.rst.txt  External_Commands.rst.txt  Internet.rst.txt  api.rst.txt  index.rst.txt  numpydoc.rst.txt  todo.rst.txt  tutorial.rst.txt
_static/: custom.css  custom.css_t  friendly.py
docs/: .buildinfo  Backups.html  Backups.rst  External_Commands.html  External_Commands.rst  Internet.html  Internet.rst  Makefile  Other.html  Other.rst  Text.html  Text.rst  __init__.py  api.rst  autogen_magics.py  conf.py  filesystem.html  filesystem.rst  genindex.html  index.html  index.rst  magics-generated.txt  make.py  math.rst  modules.rst  numerical-1.py  numerical.html  numerical.rst  numpydoc.rst  numpydoc_docstring.rst  objects.inv  publish.sh  py-modindex.html  pyutil.backup_nt_and_posix.rst  pyutil.check_IP.rst  pyutil.conda-export.rst  pyutil.conda_export.rst  pyutil.dir3.rst  pyutil.dir_cleaner.rst  pyutil.dlink.rst  (+12 more)
doctrees/: api.doctree  index.doctree  numerical.doctree  numpydoc.doctree  numpydoc_docstring.doctree  todo.doctree  tutorial.doctree
python/: __init__.py  backup-nt-and-posix.py  batch_renamer.py  check_IP.py  dir_cleaner.py  dlink.py  dlink2.py  dot_sym.ipy  env.py  find_pics.py  inspect_module.py  lazy_downloader.py  linktree.py  mkdir_reimp.py  mv_dir.py  mv_repo2.py  mv_to_repo.py  mv_to_repo_2cla.py  nvim-profiling.py  os_rename_replace.py  rclone.py  sys_checks.py  syschecks.py  tmux-nvim.py  youtube-dler.py  zillow-api.py
pyutil/: __about__.py  __init__.py  _logging.py  _paths.py  backup_nt_and_posix.py  batch_renamer.py  check_IP.py  conda_export.py  csv_to_json.py  dir3.py  dir_cleaner.py  dlink.py  dlink2.py  dot_sym.ipy  env.py  env_checks.py  find_pics.py  g.py  inspect_module.py  itersrc.py  json_sorter.py  lazy_downloader.py  linktree.py  magic_aid.py  mv_to_repo.py  nvim-profiling.py  nvim_profiling.py  package.pth  ptags.py  rclone.py  script_helper.py  shell.py  strip_space.py  sys_checks.py  tmux_nvim.py  wrap.py  yes_no_question.py  yt_dl.py  ytdl.py  zillow.py
sh/: adb_config_Linux_OSX.sh  ask.sh  bat_on_wsl.sh  blank_rename.sh  check_if_root.sh  check_tmux_version.sh  code_starter.sh  conda.sh  csv-to-json.sh  devicons.sh  dir_cleaner.sh  dlink.sh  ds.sh  enumerate_path.sh  env.sh  eslint-pre-commit.sh  fzf_general.bash  fzf_general.sh  fzf_git.bash  fzf_git.sh  fzf_marks.bash  gdbr.sh  get-ip.sh  git-gh-pages.sh  git-jump  git-sync.sh  git_commands  gitdiffb.sh  history-plotter.sh  ka-ping-yee-prompt.bash  line_counter.sh  man_maker  merge-conflicts.sh  oreillypdf.sh  python_termux.sh  qutebrowser  qutebrowser.sh  rclone-rough.sh  rsync.sh  rsync.txt  (+10 more)
test/: __init__.py  test_backup_directory.py  test_batch_renamer.py  test_check_IP.py  test_docscrape.py  test_find_pics.py  test_logging.py  test_nvim_profiling.py  test_shell.py  test_yes_no_question.py
tests/: __init__.py
tools/: .eslintrc.json  .yarnclean  AddSphinxTarget.cmake  environment.windows.txt  meta.yaml  requirements_dev.txt  utilities_vscode.code-workspace
(+340 files in other folders)
