[flake8]
max-line-length = 120

ignore =
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    E402,  # module level import not at top of file
    E731,  # do not assign a lambda expression, use a def
    C406,  # Unnecessary list literal - rewrite as a dict literal.
    C408,  # Unnecessary dict call - rewrite as a literal.
    C409,  # Unnecessary list passed to tuple() - rewrite as a tuple literal.
    S001   # found modulo formatter (incorrect picks up mod operations)
    E251   # Pep8 specifies you SHOULD leave space around operators
    E202   # whitespace between var and brackets ) } and ]
    E265   # comments error. way too subjective.
    E266   # too many leading #'s in a comment

    E302   # Guido doesn't even do this.

exclude =
    doc/sphinxext/*.py,
    doc/build/*.py

# Feel free to override the below but it blows up on termux.
jobs = 1

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

# Don't remember where I snagged this from but jesus.
[nosetests]
# verbosity=1
# detailed-errors=1
# with-coverage=1
cover-package=nose
# debug=nose.loader
# pdb=1
# pdb-failures=1
