[tool:pytest]
durations = 10
testpaths = test
addopts = -s -v --doctest-modules --doctest-glob="*.rst" --doctest-continue-on-failure --doctest-report udiff --continue-on-collection-errors -rfE
pdbcls=IPython.terminal.debugger:TerminalPdb
doctest_optionflags= NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL

[flake8]
max-line-length = 120

ignore =
    # C406,  # Unnecessary list literal - rewrite as a dict literal.
    # C408,  # Unnecessary dict call - rewrite as a literal.
    # C409,  # Unnecessary list passed to tuple() - rewrite as a tuple literal.
    # S001   # found modulo formatter (incorrect picks up mod operations)
    E251   # Pep8 specifies you SHOULD leave space around operators
    E202   # whitespace between var and brackets ) } and ]
    E265   # comments error. way too subjective.
    E266   # too many leading #'s in a comment
    E302   # Guido doesn't even do this.
    E402,  # module level import not at top of file

exclude =
    docs/sphinxext/*,
    docs/_build/*
    build
    dist
    node_modules

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[nosetests]
cover-package=nose

[pygments.styles]
# http://pygments.org/docs/plugins/
gruvbox = gruvbox.GruvboxStyle

[pydocstyle]
max-line-length = 120

ignore =

    D203, D212, D213 and D404. # defaults

convention = numpy

[pylint]
exclude = *
ignore =

    C0103

[pep8]
max-line-length=100
